# demo-soralog

./: CMakeLists.txt  README.md  build.sh  run.sh
src/: logging_object.cpp  logging_object.hpp  main.cpp
